--- a/index.html
+++ b/index.html
@@ -6,11 +6,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3-architecr-responsive</title>
 </head>
-<body>
-    <header>
+<body class="work-sans-font">
+    <header class="bg-light">
+<nav class="navbar display-flex">
+    <h3 class="brand display-flex">
+        G3 Architects
+    </h3>
+   <ul class="nav-links display-flex">
+    <!-- li.nav-items*4>a.nav-link -->
+    <li class="nav-items"><a href="" class="nav-link text-gray">Home</a></li>
+    <li class="nav-items"><a href="" class="nav-link text-gray">About</a></li>
+    <li class="nav-items"><a href="" class="nav-link text-gray">Contact Us</a></li>
+    <li class="nav-items"><a href="" class="nav-link text-gray">Login</a></li>
+   </ul>
+
+</nav>
+<div class="banner">
+    <div class="banner-content">
+        <h1>Brand New Group of Architects </h1>
+        <p class="banner-description ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <button class="primary-button">Explore More</button>
+    </div>
+    <img class="banner-image" src="./images/banner.png" alt="">
+</div>
 
     </header>
     <main>
+<section class="our-team display-flex">
+    <div class="team-image-container">
+<img src="./images/team1.png" alt="two architect design about design">
+<img src="./images/team2.png" alt="our team members">
+<img src="./images/team3.png" alt="checking the design">
+<img src="./images/team4.png" alt="our deals">
+    </div>
+<div class="our-features">
+    <h3 class="features-title"><span id="quick">Quick list</span> <span id="of-our">of Our</span> <span id="Features">Features</span></h3>
+    <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+    <button class="primary-button">Explore More</button>
+</div>
+</section>
+<section>
+    <!-- features you will enjoy -->
+
+</section>
+<h3 class="section-title">Some Facts</h3>
+<p class="text-light-grey fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
+<div class="facts-container">
+    <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+     <div class="fact display-flex">
+        <div><img src="./images/icons/ribon.png" alt="" class="fact-icon">
+        <h4 class="fact-number">54</h4>
+        <h5 class="fact-name">Awards Winnings</h5></div>
+     </div>
+     <div class="fact display-flex ">
+       <div> <img src="./images/icons/projects.png" alt="" class="fact-icon">
+        <h4 class="fact-number">1458</h4>
+        <h5 class="fact-name">Projects Finished</h5></div>
+     </div>
+     <div class="fact display-flex">
+        <div><img src="./images/icons/customers.png" alt="" class="fact-icon">
+        <h4 class="fact-number">590</h4>
+        <h5 class="fact-name">Client Works</h5></div>
+     </div>
+     <div class="fact display-flex">
+        <div><img src="./images/icons/email.png" alt="" class="fact-icon">
+        <h4 class="fact-number">22578</h4>
+        <h5 class="fact-name">Email Send</h5></div>
+     </div>
+
+    
+    
+</div>
 
     </main>
     <footer>
