--- a/index.html
+++ b/index.html
@@ -45,12 +45,42 @@
     <button class="primary-button">Explore More</button>
 </div>
 </section>
-<section>
-    <!-- features you will enjoy -->
+<section class="features display-flex">
 
+    <!-- features you will enjoy -->
+<div >
+    <h3 class="section-title" id="features-sectio-title">Features you will love & enjoy</h3>
+    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+    <!--features card container -->
+<div class="feature s-card">
+    <h4 class="features-title">Dexktop & Mobile Version</h4>
+    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+<div class="features-card">
+    <h4 class="features-title">Dexktop & Mobile Version</h4>
+    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+<div class="features-card">
+    <h4 class="features-title">Dexktop & Mobile Version</h4>
+    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+<div class="features-card">
+    <h4 class="features-title">Dexktop & Mobile Version</h4>
+    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+</div>
+
+<div class="features-architect">
+    <img src="./images/architect.png" alt="">
+    <button id="experience-badge">
+        <span id="ecperience-year">10 Years </span>
+        <br>
+        <span id="experience-btn">Experience</span>
+    </button>
+</div>
 </section>
 <h3 class="section-title">Some Facts</h3>
-<p class="text-light-grey fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
+<p class="text-light-grey ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
 <div class="facts-container">
     <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
      <div class="fact display-flex">
@@ -77,6 +107,19 @@
     
     
 </div>
+<section class="our-sponsors">
+<div class="sponsor-info">
+    <h3 class="sponsor-title">Our Sponspors</h3>
+    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
+</div>
+<div class="sponsor-companies">
+    <img src="./images/sponsors/spotify.png" alt="">
+    <img src="./images/sponsors/amazon.png" alt="">
+    <img src="./images/sponsors/google.png" alt="">
+    <img src="./images/sponsors/telerama.png" alt="">
+    <img src="./images/sponsors/figma.png" alt="">
+</div>
+</section>
 
     </main>
     <footer>
